fix: Scrollbar area

--- a/typ-editor/src/app/poi/poi.component.css
+++ b/typ-editor/src/app/poi/poi.component.css
@@ -69,7 +69,7 @@ mat-grid-tile div {
 .icon-grid {
     display: block;
     overflow: auto;
-    max-height: 90%;
+    height: calc(100% - 120px);
 }
 
 .tile-content{
