--- a/typ-editor/src/app/polygone/polygone.component.css
+++ b/typ-editor/src/app/polygone/polygone.component.css
@@ -68,7 +68,7 @@ mat-grid-tile div {
 .icon-grid {
     display: block;
     overflow: auto;
-    max-height: 90%;
+    height: calc(100% - 120px);
 }
 
 .tile-content{
